--- a/index.css
+++ b/index.css
@@ -5,6 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Mali:wght@800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo:ital@1&display=swap');
 body{
     margin:0;
 }
@@ -109,7 +110,7 @@ body{
     width:max-content;
 }
 .welcome-venue{
-    font-family: 'Mali', cursive;
+    font-family: 'Arvo', serif;
     font-size:24px;
     color:#2474D2;
     font-weight:bolder;
@@ -319,7 +320,8 @@ body{
         flex-wrap:wrap;
         padding-left:20px;
         padding-right:20px;
-        background-position-x:1052px;
+        background-position-x:47%;
+        flex-direction:column;
     }
     .hero-right-section{
         display:block;
@@ -353,7 +355,7 @@ body{
     }
     .intro-video{
         width:100%;
-        height:170px;
+        height:49vw;
         box-sizing:border-box;
     }
     .intro-text, .topic-title{
@@ -365,7 +367,8 @@ body{
         flex-direction:column;
     }
     .about-description, .description{
-        width: 100%;
-        font-size:18px;
+        width: 95%;
+        font-size:16px;
+        line-height:1.5;
     }
 }
